# application-workflow-service

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  curl.txt  message.txt  old_resume.json  push_resume_helper.py  pyproject.toml  pytest.ini  requirements.txt  resume.json  run_init_db.py  run_tests_with_coverage.sh  test_succ.py
.github/workflows/: ci.yaml  docker-publish.yml  load-tests.yaml
app/: config.py  main.py  rabbitmq_client.py
app/cli/: __init__.py  client.py  config.py  main.py  output.py
app/cli/commands/: admin.py  apps.py  config.py  export.py  health.py  metrics.py  migrate.py  queue.py  scheduler.py  webhooks.py
app/core/: admin_auth.py  audit.py  auth.py  cache.py  config.py  correlation.py  database.py  exceptions.py  idempotency.py  input_validation.py  metrics.py  mongo.py  postgres.py  rabbitmq_client.py  rate_limit.py  redis_cache.py  retry.py  security.py  security_headers.py  tracing.py  versioning.py  websocket_manager.py
app/log/: logging.py
app/migrations/: __init__.py  models.py  runner.py
app/migrations/versions/: 001_initial_indexes.py  002_idempotency_keys_collection.py  003_application_status_index.py  004_webhook_collections.py
app/models/: __init__.py  application.py  job.py  user.py  webhook.py
app/routers/: admin_router.py  app_router.py  batch_router.py  export_router.py  healthcheck_router.py  metrics_router.py  scheduler_router.py  webhook_router.py  websocket_router.py
app/routers/healthchecks/: fastapi_healthcheck_redis.py
app/routers/healthchecks/fastapi_healthcheck/: __init__.py  domain.py  model.py  route.py  service.py
app/routers/healthchecks/fastapi_healthcheck_mongodb/: service.py
app/routers/healthchecks/fastapi_healthcheck_rabbitmq/: service.py
app/routers/v1/: __init__.py  applications.py  applied.py  batch.py  export.py
app/routers/v2/: __init__.py  applications.py
app/scheduler/: __init__.py  history.py  scheduler.py
app/scheduler/jobs/: cleanup.py  monitoring.py
app/schemas/: app_jobs.py
app/scripts/: init_db.py
app/services/: admin_service.py  application_uploader_service.py  base_publisher.py  batch_service.py  export_service.py  message_sender.py  notification_service.py  pdf_resume_service.py  queue_service.py  resume_ops.py  webhook_service.py
app/tests/: test_app_router.py  test_example_router.py  test_resume_ops.py
app/workers/: __init__.py  application_worker.py
docs/: index.md
k8s/: README.md
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
k8s/overlays/development/: kustomization.yaml
k8s/overlays/development/patches/: configmap-patch.yaml  deployment-patch.yaml
k8s/overlays/production/: ingress.yaml  kustomization.yaml
k8s/overlays/production/patches/: configmap-patch.yaml  deployment-patch.yaml  hpa-patch.yaml
k8s/overlays/staging/: kustomization.yaml
k8s/overlays/staging/patches/: configmap-patch.yaml
load_tests/: README.md  check_thresholds.py  config.py  docker-compose.yaml  locustfile.py  prometheus.yaml  requirements.txt
load_tests/data/: sample_jobs.json
load_tests/grafana/provisioning/dashboards/: dashboards.yaml
load_tests/grafana/provisioning/dashboards/json/: load-test-dashboard.json
load_tests/tasks/: __init__.py  applications.py  health.py  listing.py  status.py
memory-bank/: activeContext.md  architecturalRecommendations.md  decisionLog.md  implementationPlan-BackgroundProcessing.md  productContext.md  progress.md  systemArchitecture.md  systemPatterns.md  testConfiguration.md  testImplementation.md  testPlan.md
monitoring/: loki-config.yaml  prometheus-alerts.yaml  slo-config.yaml
tests/: README.md  conftest.py  test_app_router.py  test_main.py  test_sprint1_features.py  test_sprint2_features.py  test_sprint3_features.py  test_sprint4_features.py
tests/cli/: test_client.py  test_commands.py  test_config.py
tests/core/: test_rabbitmq_client.py  test_redis_cache.py
tests/integration/: test_application_flow.py
tests/migrations/: test_migration_runner.py
tests/routers/: test_app_router_helpers.py  test_app_router_retrieve.py  test_app_router_submit.py
tests/services/: test_application_uploader_service.py  test_notification_service.py  test_pdf_resume_service.py
