[tool.poetry]
name = "application-manager-service"
version = "0.1.0"
description = ""
authors = ["x <y>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "9.4.3"
aiormq = "6.8.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
asyncpg = "0.30.0"
cffi = "1.17.1"
click = "8.1.7"
colorama = "0.4.6"
dnspython = "2.7.0"
ecdsa = "0.19.0"
fastapi = "0.115.4"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httptools = "0.6.4"
httpx = "0.27.2"
idna = "3.10"
iniconfig = "2.0.0"
loguru = "0.7.2"
motor = "3.6.0"
multidict = "6.1.0"
packaging = "24.2"
pamqp = "3.3.0"
pika = "1.3.2"
pika-stubs = "0.1.3"
pluggy = "1.5.0"
propcache = "0.2.0"
pyasn1 = "0.6.1"
pycparser = "2.22"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
pydantic-core = "2.23.4"
pymongo = "4.9.2"
pytest = "8.3.3"
bcrypt = "4.2.1"
pytest-asyncio = "0.24.0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.36"
starlette = "0.41.2"
typing-extensions = "4.12.2"
uvicorn = "0.32.0"
watchfiles = "0.24.0"
websockets = "13.1"
yarl = "1.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
