[tool.poetry]
name = "application-manager-service"
version = "0.1.0"
description = "Application Manager"
authors = ["Lorenzo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "0.30.0"
bcrypt = "4.2.1"
fastapi = "0.115.4"
loguru = "0.7.2"
pytest = "8.3.3"
python-jose = "3.3.0"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
SQLAlchemy = "2.0.36"
uvicorn = "0.32.0"
motor = "3.6.0"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
