[tool.poetry]
name = "application-manager-service"
version = "1.0.0"
description = "Application Manager Service - Job application workflow management"
authors = ["Lorenzo"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "0.30.0"
bcrypt = "4.2.1"
fastapi = "0.115.4"
loguru = "0.7.2"
pytest = "8.3.3"
python-jose = "3.3.0"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
SQLAlchemy = "2.0.36"
uvicorn = "0.32.0"
motor = "3.6.0"
python-multipart = "0.0.20"
aio-pika = "9.5.3"
datadog-api-client = "2.32.0"
prometheus-client = "^0.19.0"
openpyxl = "^3.1.2"
typer = {version = "^0.9.0", extras = ["all"]}
rich = "^13.7.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
bandit = "^1.7.7"

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
pytest-mock = "^3.12.0"
pytest-cov = "^6.0.0"
fakeredis = "^2.21.0"

[tool.poetry.group.tracing.dependencies]
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-exporter-jaeger = "^1.21.0"
opentelemetry-exporter-otlp = "^1.22.0"

[tool.poetry.scripts]
app-manager = "app.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# Black configuration
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# =============================================================================
# Ruff configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# =============================================================================
# MyPy configuration
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "migrations/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# =============================================================================
# Pytest configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# =============================================================================
# Coverage configuration
# =============================================================================
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
fail_under = 20
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Bandit configuration
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used check
